--- a/src/index.scss
+++ b/src/index.scss
@@ -2,11 +2,19 @@ html {
 	font-size: 16px;
 	font-family: Arial, Helvetica, sans-serif;
 }
-
-body {
+* {
 	box-sizing: border-box;
+}
+body {
 	padding: 0;
 	margin: 0;
+}
+
+h2 {
+	width: 100%;
+	text-align: center;
+	font-size: 1.5rem;
+	margin: 0.625rem auto;
 }
 
 button {
